Add button to settings to update pod list via AJAX. Add autocomplete functionality to pod input field.

--- a/css/wp-to-diaspora.css
+++ b/css/wp-to-diaspora.css
@@ -33,3 +33,10 @@
 .wp-to-diaspora-settings .tab-content.current{
   display: inherit;
 }
+
+.settings_page_wp_to_diaspora .spinner {
+  display: inline-block;
+  margin: 0;
+  float: none;
+  vertical-align: middle;
+}
