Finish implementing aspects for settings and posting pages.

--- a/css/wp-to-diaspora.css
+++ b/css/wp-to-diaspora.css
@@ -28,7 +28,8 @@
   display: inherit;
 }
 
-.settings_page_wp_to_diaspora .spinner {
+.settings_page_wp_to_diaspora .spinner,
+#wp_to_diaspora_meta_box .spinner {
   display: inline-block;
   margin: 0;
   float: none;
