--- a/css/wp-to-diaspora.css
+++ b/css/wp-to-diaspora.css
@@ -31,6 +31,7 @@
 .settings_page_wp_to_diaspora .spinner,
 #wp_to_diaspora_meta_box .spinner {
   display: inline-block;
+  visibility: visible;
   margin: 0;
   float: none;
   vertical-align: middle;
